debug image and modal

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
             <div class="movie-list-holder">
                 <div class="row">
                     <div class="movie" id="movie1">
-                        <img src="/image/homecha_poster.jpg" alt="homecha_poster" class="movie-image">
+                        <img src="image/homecha_poster.jpg" alt="homecha_poster" class="movie-image">
                         <div class="movie-text">
                             <div class="movie-text-holder">
                                 <h4>Hometown Cha-Cha-Cha</h4>
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                     <div class="movie" id="movie2">
-                        <img src="/image/startup_poster.jpg" alt="startup_poster" class="movie-image">
+                        <img src="image/startup_poster.jpg" alt="startup_poster" class="movie-image">
                         <div class="movie-text">
                             <div class="movie-text-holder">
                                 <h4>START-UP</h4>
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                     <div class="movie" id="movie3">
-                        <img src="/image/squidgame_poster.jpg" alt="squidgame_poster" class="movie-image">
+                        <img src="image/squidgame_poster.jpg" alt="squidgame_poster" class="movie-image">
                         <div class="movie-text">
                             <div class="movie-text-holder">
                                 <h4>Squid Game</h4>
@@ -79,7 +79,7 @@
                 <!-- row 2 -->
                 <div class="row">
                     <div class="movie" id="movie4">
-                        <img src="image/crashlanposter.jpg" alt="_poster" class="movie-image">
+                        <img src="image/crashlanposter.jpg" alt="crashlanposter" class="movie-image">
                         <div class="movie-text">
                             <div class="movie-text-holder">
                                 <h4>Crash Landing on You</h4>
@@ -88,7 +88,7 @@
                         </div>
                     </div>
                     <div class="movie" id="movie5">
-                        <img src="image/hodelunaposter.jpg" alt="_poster" class="movie-image">
+                        <img src="image/hodelunaposter.jpg" alt="hodelunaposter" class="movie-image">
                         <div class="movie-text">
                             <div class="movie-text-holder">
                                 <h4>Hotel Del Luna</h4>
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                     <div class="movie" id="movie6">
-                        <img src="image/seckimposter.jpg" alt="_poster" class="movie-image">
+                        <img src="image/seckimposter.jpg" alt="seckimposter" class="movie-image">
                         <div class="movie-text">
                             <div class="movie-text-holder">
                                 <h4>What's Wrong with Secretary Kim</h4>
@@ -111,7 +111,7 @@
                 <!-- row 3 -->
                 <div class="row">
                     <div class="movie" id="movie7">
-                        <img src="image/gangnamposter.jpg" alt="_poster" class="movie-image">
+                        <img src="image/gangnamposter.jpg" alt="gangnamposter" class="movie-image">
                         <div class="movie-text">
                             <div class="movie-text-holder">
                                 <h4>My ID Is Gangnam Beauty</h4>
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                     <div class="movie" id="movie8">
-                        <img src="image/tmrwyouposter.jpg" alt="_poster" class="movie-image">
+                        <img src="image/tmrwyouposter.jpg" alt="tmrwyouposter" class="movie-image">
                         <div class="movie-text">
                             <div class="movie-text-holder">
                                 <h4>Tomorrow with You</h4>
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                     <div class="movie" id="movie9">
-                        <img src="image/goblinposter.jpg" alt="_poster" class="movie-image">
+                        <img src="image/goblinposter.jpg" alt="goblinposter" class="movie-image">
                         <div class="movie-text">
                             <div class="movie-text-holder">
                                 <h4>Guardian: The Lonely and Great God</h4>
@@ -143,7 +143,7 @@
                 <!-- row 4 -->
                 <div class="row" style="margin-bottom: 12px">
                     <div class="movie" id="movie10">
-                        <img src="image/sfromhellposter.jpg" alt="_poster" class="movie-image">
+                        <img src="image/sfromhellposter.jpg" alt="sfromhellposter" class="movie-image">
                         <div class="movie-text">
                             <div class="movie-text-holder">
                                 <h4>Stranger from Hell</h4>
@@ -154,7 +154,7 @@
 
                     <!-- coming soon banner -->
                     <div class="movie" id="movie10">
-                        <img src="image/comingsoon_banner.png" alt="_poster" class="movie-image">
+                        <img src="image/comingsoon_poster.png" alt="comingsoon_poster" class="movie-image">
                         <div class="movie-text">
                             <div class="movie-text-holder">
                                 <h4>Coming Soon</h4>
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                     <div class="movie" id="movie10">
-                        <img src="image/comingsoon_banner.png" alt="_poster" class="movie-image">
+                        <img src="image/comingsoon_poster.png" alt="comingsoon_poster" class="movie-image">
                         <div class="movie-text">
                             <div class="movie-text-holder">
                                 <h4>Coming Soon</h4>
@@ -186,7 +186,7 @@
     
             <!-- hottest movie card -->
             <div class="card" id="hottest_movie">
-                <div class="card-image"></div>
+                <img src="image/homecha_poster.jpg" alt="homecha_poster" class="card-image">
                 <div class="card-text">
                     <div class="card-text-holder">
                         <h3>Hometown Cha-Cha-Cha</h3>
@@ -452,6 +452,6 @@
 
 </body>
 
-<script src="/js/main.js"></script>
+<script src="js/main.js"></script>
 
 </html>
